--- a/stage-08/projects/api/.gitignore
+++ b/stage-08/projects/api/.gitignore
@@ -1,3 +1,7 @@
+
+# Ignore database files.
+*.db
+
 # Created by https://www.toptal.com/developers/gitignore/api/node
 # Edit at https://www.toptal.com/developers/gitignore?templates=node
 
