--- a/stage-08/projects/api/package.json
+++ b/stage-08/projects/api/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "node src/server.js",
-    "dev-server": "nodemon src/server.js",
+    "dev": "nodemon src/server.js",
     "migrate": "knex migrate:latest"
   },
   "keywords": [],
@@ -16,6 +16,7 @@
     "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^9.0.2",
     "knex": "^2.5.1",
     "sqlite": "^5.0.1",
     "sqlite3": "^5.1.6"
