--- a/stage-08/projects/api/package.json
+++ b/stage-08/projects/api/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node src/server.js",
+    "start": "pm2-runtime start ecosystem.config.cjs --env production",
     "dev": "nodemon src/server.js",
     "migrate": "knex migrate:latest"
   },
